35-istio.yml
apiVersion: v1
kind: Namespace
metadata:
  name: example1
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: example2
  labels:
    istio-injection: enabled
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ex1-deploy
  namespace: example1
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  replicas: 1
  selector:
    matchLabels:
      appName: nginx
  template:
    metadata:
      labels:
        appName: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.24
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ex2-deploy
  namespace: example2
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  replicas: 1
  selector:
    matchLabels:
      appName: nginx
  template:
    metadata:
      labels:
        appName: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.24
---
apiVersion: v1
kind: Service
metadata:
  name: ex1
  namespace: example1
spec:
  selector:
    appName: nginx
  ports:
    - port: 80 # service port
      targetPort: 80 # nginx pod port
---
apiVersion: v1
kind: Service
metadata:
  name: ex2
  namespace: example2
spec:
  selector:
    appName: nginx
  ports:
    - port: 80 # service port
      targetPort: 80 # nginx pod port
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: ex1
  namespace: example1
spec:
  mtls:
    mode: STRICT
---
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: ex2
  namespace: example2
spec:
  mtls:
    mode: STRICT
---
apiVersion: v1
kind: Pod
metadata:
  name: debug
  namespace: default
spec:
  serviceAccountName: debug
  containers:
    - name: debug
      image: docker.io/rkalluru/learnk8s:rhel9-bare
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: ex1-allow
  namespace: example1
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/example2/sa/debug"]
    to:
    - operation:
        methods: ["GET"]
        paths: ["*"]

---
apiVersion: v1
kind: Pod
metadata:
  name: debug
  namespace: example2
spec:
  serviceAccountName: debug
  containers:
    - name: debug
      image: docker.io/rkalluru/learnk8s:rhel9-bare
---
apiVersion: v1
kind: Pod
metadata:
  name: debug
spec:
  containers:
    - name: debug
      image: docker.io/rkalluru/learnk8s:rhel9-bare
